Source/WebCore/svg/ColorDistance.cpp
@@ -63,18 +63,19 @@ ColorDistance ColorDistance::scaledDistance(float scaleFactor) const
                          static_cast<int>(scaleFactor * m_blueDiff));
 }
 
-Color ColorDistance::addColorsAndClamp(const Color& first, const Color& second)
+Color ColorDistance::clampColor(int red, int green, int blue, int alpha)
 {
-    return Color(clampColorValue(first.red() + second.red()),
-                 clampColorValue(first.green() + second.green()),
-                 clampColorValue(first.blue() + second.blue()));
+    return Color(clampColorValue(red), clampColorValue(green), clampColorValue(blue), clampColorValue(alpha));
 }
 
-Color ColorDistance::addToColorAndClamp(const Color& color) const
+Color ColorDistance::addColors(const Color& first, const Color& second)
 {
-    return Color(clampColorValue(color.red() + m_redDiff),
-                 clampColorValue(color.green() + m_greenDiff),
-                 clampColorValue(color.blue() + m_blueDiff));
+    return Color(first.red() + second.red(), first.green() + second.green(), first.blue() + second.blue());
+}
+
+Color ColorDistance::addToColor(const Color& color) const
+{
+    return Color(color.red() + m_redDiff, color.green() + m_greenDiff, color.blue() + m_blueDiff);
 }
 
 bool ColorDistance::isZero() const
